src/test/deca/test_compilateur/context/invalid/created/assign/assign_boolean_class.deca
// Description :
//    test  assign entre un boolean et une classe
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.28) Les types boolean et int sont incompatibles pour l’affectation

class A{}
{
boolean a = true;
A b;
b = a;
}
